calico/ns-svc-rules/allow-egress-frontend.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-frontend-egress
  namespace: advanced-policy-demo
spec:
  selector: run == 'frontend'
  types:
  - Egress
  egress:
  - action: Allow
