calico/ns-svc-rules/allow-ingress-backend.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress
  namespace: advanced-policy-demo
spec:
  selector: app == 'backend'
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      selector: run == 'frontend'
